--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -11,7 +11,7 @@
                 <div class="card-body">
                     <div class="d-flex align-items-center justify-content-end flex-wrap">
                         <div class="d-flex align-items-center flex-wrap">
-                            <div class="dropdown me-5">
+                            @*<div class="dropdown me-5">
                                 <span class="dropdown-toggle align-items-center d-flex"
                                       id="dropdownMenuButton04" role="button" data-bs-toggle="dropdown"
                                       aria-expanded="false">
@@ -27,7 +27,7 @@
                                     <a class="dropdown-item" href="#">Start date</a>
                                     <a class="dropdown-item" href="#">Time tracked</a>
                                 </div>
-                            </div>
+                            </div>*@
                             <a href="/Employee/Add" class="text-body me-3 align-items-center d-flex">
                                 <i class="fa-regular fa-square-check me-1 h5 text-primary"></i>
                                 Add
