--- a/Views/Project/Details.cshtml
+++ b/Views/Project/Details.cshtml
@@ -11,15 +11,20 @@
                     <div class="d-flex flex-wrap align-items-center justify-content-between">
                         <div class="d-flex flex-wrap align-items-center">
                             <div class="d-flex flex-wrap align-items-center mb-3 mb-sm-0">
-                                <h4 class="me-2 h4">Web Design</h4>
-                                <span> - P1</span>
+                                <h4 class="me-2 h4 proj-name"></h4>
+                                <span>&nbsp;-&nbsp;</span><span class="proj-code"></span>
                             </div>
+                        </div>
+                        <div>
+                            <a role="button" href="" class="edit me-2 border-0 bg-transparent text-warning h4">
+                                <i class="fa-regular fa-pen-to-square"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-lg-12">
+        <div class="col-lg-4">
             <div class="card">
                 <div class="card-header">
                     <div class="header-title">
@@ -30,12 +35,170 @@
                     <ul class="list-inline m-0 p-0">
                         <li class="d-flex mb-2">
                             <p class="news-detail mb-0">
-                                Project about designing a funtional website
+                                <span class="proj-desc"></span>
+                            </p>
+                        </li>
+                        <li class="d-flex mb-2">
+                            <p class="news-detail mb-0">
+                                Leader: <span id="proj-leaderName"></span>
+                            </p>
+                        </li>
+                        <li class="d-flex mb-2">
+                            <p class="news-detail mb-0">
+                                Leader ID: <span id="proj-leaderId"></span>
+                            </p>
+                        </li>
+                        <li class="d-flex mb-2">
+                            <p class="news-detail mb-0">
+                                Email: <a href="" id="a-proj-email"><span id="proj-email"></span></a>
+                            </p>
+                        </li>
+                        <li class="d-flex mb-2">
+                            <p class="news-detail mb-0">
+                                Phone: <a href="" id="a-proj-phone"><span id="proj-phone"></span></a>
+                            </p>
+                        </li>
+                        <li class="d-flex mb-2">
+                            <p class="news-detail mb-0">
+                                Department: <span id="proj-dept"></span>
                             </p>
                         </li>
                     </ul>
                 </div>
             </div>
+            <div class="card">
+                <div class="card-header">
+                    <div class="header-title">
+                        <h4 class="card-title">Projects</h4>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="twit-feed">
+                        <div class="d-flex align-items-center mb-2">
+                            <div class="media-support-info">
+                                <h6 class="mb-0">Figma Community</h6>
+                            </div>
+                        </div>
+                        <div class="media-support-body">
+                            <p class="mb-0">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting
+                                industry
+                            </p>
+                        </div>
+                    </div>
+                    <hr class="my-4">
+                    <div class="twit-feed">
+                        <div class="d-flex align-items-center mb-2">
+                            <div class="media-support-info">
+                                <h6 class="mb-0">Flutter</h6>
+                            </div>
+                        </div>
+                        <div class="media-support-body">
+                            <p class="mb-0">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting
+                                industry
+                            </p>
+                        </div>
+                    </div>
+                    <hr class="my-4">
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-8">
+            <div class="card" data-aos="fade-up" data-aos-delay="900">
+                <div class="flex-wrap card-header d-flex justify-content-between">
+                    <div class="header-title">
+                        <h4 class="card-title">Average evaluation</h4>
+                    </div>
+                    <div class="dropdown">
+                        <a href="#" class="text-gray dropdown-toggle" id="dropdownMenuButton1"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            This Week
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end"
+                            aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">This Week</a></li>
+                            <li><a class="dropdown-item" href="#">This Month</a></li>
+                            <li><a class="dropdown-item" href="#">This Year</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="flex-wrap d-flex align-items-center justify-content-between">
+                        <div id="myChart" class="col-md-8 col-lg-8 myChart"></div>
+                        <div class="d-grid gap col-md-4 col-lg-4">
+                            <div class="d-flex align-items-start">
+                                <svg class="mt-2 icon-14" xmlns="http://www.w3.org/2000/svg" width="14"
+                                     viewBox="0 0 24 24" fill="#3a57e8">
+                                    <g>
+                                        <circle cx="12" cy="12" r="8" fill="#3a57e8"></circle>
+                                    </g>
+                                </svg>
+                                <div class="ms-3">
+                                    <span class="text-gray">Highest Dep</span>
+                                    <h6>76.0</h6>
+                                </div>
+                            </div>
+                            <div class="d-flex align-items-start">
+                                <svg class="mt-2 icon-14" xmlns="http://www.w3.org/2000/svg" width="14"
+                                     viewBox="0 0 24 24" fill="#4bc7d2">
+                                    <g>
+                                        <circle cx="12" cy="12" r="8" fill="#4bc7d2"></circle>
+                                    </g>
+                                </svg>
+                                <div class="ms-3">
+                                    <span class="text-gray">My Dep</span>
+                                    <h6>53.0</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
+@section script
+{
+    <script>
+        $(document).ready(function () {
+            const urlParams = new URLSearchParams(window.location.search);
+            const proj_code = urlParams.get("projcode");
+            console.log(proj_code);
+            let data = {
+                proj_code: proj_code
+            };
+            console.log(data);
+            $.ajax({
+                url: "/project/detailsdata",
+                data: data,
+                type: "POST",
+                success: function (result) {
+                    switch (result.status) {
+                        case StatusCode.Success:
+                            data = JSON.parse(result.data);
+                            console.log(data);
+
+                            $(".proj-code").text(data.PROJ_CODE);
+                            $(".proj-name").text(data.PROJ_NAME);
+                            $("#proj-leaderName").text(data.LEADER_NAME);
+                            $("#proj-leaderId").text(data.LEADER_ID);
+                            $("#proj-email").text(data.LEADER_EMAIL);
+                            $("#a-proj-email").prop("href", "mailto:" + data.LEADER_EMAIL);
+                            $("#proj-phone").text(data.LEADER_PHONE);
+                            $("#a-proj-phone").prop("href", "tel:" + data.LEADER_PHONE);
+                            $("#proj-dept").text(data.PROJDEPT_NAME);
+                            $(".proj-desc").text(data.PROJ_DESC);
+                            $("a.edit").prop("href", "/Project/Edit?projcode=" + data.PROJ_CODE);
+                            $("#my-modal").fadeOut();
+                            break;
+                        default:
+                            AppendAlert("Get project data failed!", StatusAlert.Error);
+                            break;
+                    }
+                }
+            })
+        })
+    </script>
+}
